<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="br.com.ilhasoft.protejaBrasil.model.view.ViolationReportViewModel"/>

        <variable name="viewModel" type="ViolationReportViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        style="@style/padding_report_item">

        <TextView
            android:id="@+id/question_victim_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/title_question_victim_info"
            style="@style/question_format" />

        <EditText
            android:id="@+id/victimName"
            android:layout_width="match_parent"
            android:hint="@string/hint_victim_name"
            app:binding="@{viewModel.victimName}"
            style="@style/text_input_format" />

        <TextView
            android:id="@+id/question_victim_locale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/title_question_victim_location_description"
            style="@style/question_format" />

        <EditText
            android:id="@+id/victimLocation"
            android:layout_width="match_parent"
            android:hint="@string/hint_victim_location_description"
            app:binding="@{viewModel.victimLocation}"
            style="@style/text_input_format" />

    </LinearLayout>

</layout>
