<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:clickable="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/report_thanks"/>

        <TextView
            android:id="@+id/protocolTitle"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:text="@string/message_report_protocol"/>

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/shape_orange_round_label"
            android:textColor="@android:color/white"
            android:text="@string/disk_100"/>

        <TextView
            android:id="@+id/protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/yellow"
            tools:text="2133218" />

        <TextView
            android:id="@+id/message"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:text="@string/protocol_info" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="80dp"
            android:foreground="?attr/selectableItemBackground"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:text="@string/label_back_start"/>

    </LinearLayout>

</layout>
