<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_onboard_woman" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/onboard_message"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/onboard_submessage"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.4" />

    <Button
        android:id="@+id/proceed"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:background="@null"
        android:text="@string/proceed"
        android:textColor="@color/blue_button" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

</LinearLayout>